<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF7"
    android:orientation="vertical" >
    
	<LinearLayout
        android:layout_width="match_parent"
		android:layout_height="50dp"
		android:gravity="center_vertical"
        android:background="@drawable/skin_header_bar_bg"
        android:orientation="horizontal" >

        <TextView
			android:id="@+id/vc_txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@drawable/btn_color4"
            android:textSize="17sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/enter_verifycode"
            android:textColor="#000000"
            android:textSize="17sp" />
        
        <Button
			android:id="@+id/vc_btnFinish"
			android:layout_width="52dp"
			android:layout_height="35dp"
			android:layout_marginRight="15dp"
			android:background="@drawable/btn_style5"
			android:enabled="false"
			android:text="@string/finish"
			android:textColor="@drawable/btn_color4"
			android:textSize="17sp" />
	</LinearLayout>
	
	<FrameLayout 
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginTop="12dp" >
        
    	<ImageView
        	android:id="@+id/vc_imgVC"
        	android:contentDescription="@string/app_name"
	    	android:layout_width="130dp"
			android:layout_height="53dp"
			android:scaleType="fitXY"
        	android:layout_gravity="center" />
		
    	<ProgressBar
        	android:id="@+id/vc_prgLogining"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
        	android:visibility="gone" />
    	
	</FrameLayout>

    
    <TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:gravity="center"
		android:text="@string/change"
		android:textColor="#616A89"
		android:textSize="12sp" />
    
	<EditText
		android:id="@+id/vc_edtVC"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginTop="24dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@drawable/skin_aio_input_bg"
		android:gravity="center"
		android:singleLine="true"
		android:inputType="text" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:text="@string/vc_tips"
		android:textColor="#999999"
		android:textSize="12sp" />
	
</LinearLayout>
