<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/login_imgAvatar"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:src="@drawable/login_default_avatar_login" />
    
	<LinearLayout
		android:id="@+id/rl"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_gravity="center"
		android:orientation="vertical" >
        	
        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="@drawable/login_input"
            android:orientation="vertical" >

            <LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" 
            	android:orientation="horizontal"
            	android:gravity="right" >
            
                <EditText
                	android:id="@+id/login_edtNum"
                	android:layout_width="0dp"
                	android:layout_height="44dp"
                	android:layout_weight="1"
                	android:background="@null"
                	android:hint="@string/idtxthint"
                	android:singleLine="true"
                	android:inputType="number"
                	android:textColorHint="#999999"
                	android:paddingLeft="15dp"
                	android:textSize="18sp" />

            	<ImageView
                	android:id="@+id/login_imgDropdownArrow"
                	android:contentDescription="@string/app_name"
                	android:layout_width="wrap_content"
                	android:layout_height="44dp"
                	android:layout_marginRight="15dp"
                	android:layout_marginTop="5dp"
                	android:src="@drawable/login_more_up" />
            </LinearLayout>    
                        
            <View
        		android:layout_width="match_parent"
        		android:layout_height="0.5dp"
        		android:background="#CACDD1" />
            
            <EditText
            	android:id="@+id/login_edtPwd"
            	android:layout_width="match_parent"
            	android:layout_height="44dp"
            	android:background="@null"
            	android:hint="@string/pwdtxthint"
            	android:inputType="textPassword"
            	android:singleLine="true"
            	android:textColorHint="#999999"
            	android:paddingLeft="15dp"
            	android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/loginbtntext"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:background="@drawable/button_style1" />
	</LinearLayout>
    
    <LinearLayout
		android:id="@+id/content"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <TextView
			android:id="@+id/login_txtForgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pwd"
            android:textColor="#0079FF"
            android:textSize="16sp" />

        <TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1" />
        
        <Button
			android:id="@+id/login_btnNewUser"
			android:layout_width="67dp"
			android:layout_height="30dp"
			android:background="@drawable/button_style2"
			android:text="@string/new_user"
			android:textColor="@drawable/btn_color"
			android:textSize="15sp" />
	</LinearLayout>
</LinearLayout>
