<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skin_chat_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/skin_header_bar_bg" >
        
        <TextView
            android:id="@+id/group_txtBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:textColor="#0079FF"
            android:text="@string/contact"
            android:textSize="15sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#000000"
            android:text="@string/group"
            android:textSize="17sp" />
        
        <ImageButton
            android:id="@+id/group_btnAdd"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/skin_qzone_main_more" />
    </RelativeLayout>
    
	<com.handmark.pulltorefresh.library.PullToRefreshListView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/group_lvGList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="true"
        ptr:ptrHeaderBackground="#353535"
        ptr:ptrHeaderTextColor="@android:color/white"
        ptr:ptrHeaderSubTextColor="@android:color/white"
        ptr:ptrAnimationStyle="flip" />

</LinearLayout>
