<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skin_chat_background" 
    android:orientation="vertical" >

	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/skin_header_bar_bg" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColor="#0079FF"
            android:text="@string/msg"
            android:textSize="15sp" />
        
        <TextView
            android:id="@+id/chat_txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#000000"
            android:textSize="17sp" />
        
        <ImageButton
            android:id="@+id/chat_btnAddContact"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_style3" />
    </RelativeLayout>

	<com.handmark.pulltorefresh.library.PullToRefreshListView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chat_lvMsg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        android:divider="@null"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="true"
        android:scrollbarStyle="outsideOverlay"
        android:stackFromBottom="false"
        android:transcriptMode="normal" />

	<LinearLayout
        android:id="@+id/chat_inputbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/skin_aio_input_bar_bg"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/chat_btnFace"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_style8" />

        <ImageButton
            android:id="@+id/chat_btnMore"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:background="@drawable/btn_style9" />

        <EditText
            android:id="@+id/chat_edtMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="8dp"
            android:inputType="none"
            android:singleLine="false"
            android:maxLines="3"
            android:textSize="16sp"
            android:background="@drawable/skin_aio_input_bg" />
        
        <Button
            android:id="@+id/chat_btnSend"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:background="@drawable/btn_style10"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/send" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat_facebar"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:background="@drawable/aio_face_bg"
        android:visibility="gone"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/chat_vpFace"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/chat_dotbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal" />
    </LinearLayout>
    
</LinearLayout>